--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -10,5 +10,6 @@ dependencies{
     compile 'org.seleniumhq.selenium:selenium-firefox-driver:3.141.59'
     compile 'org.seleniumhq.selenium:selenium-java:3.141.59'
     compile 'org.seleniumhq.selenium:selenium-chrome-driver:3.141.59'
-    implementation 'org.hamcrest:java-hamcrest:2.0.0.0'        
+    implementation 'org.hamcrest:java-hamcrest:2.0.0.0'
+    implementation 'com.beust:jcommander:1.72'
 }
