--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'java'
 
-repositories{
+repositories {
     mavenCentral();
 }
 
-dependencies{
+dependencies {
     compile 'org.testng:testng:7.0.0-beta1'
     compile 'org.seleniumhq.selenium:htmlunit-driver:2.33.3'
     compile 'org.seleniumhq.selenium:selenium-firefox-driver:3.141.59'
@@ -14,4 +14,20 @@ dependencies{
     implementation 'com.beust:jcommander:1.72'
     implementation 'com.thoughtworks.xstream:xstream:1.4.11.1'
     implementation 'com.google.code.gson:gson:2.8.5'
+}
+
+task testGroups(type: Test) {
+    useTestNG {
+        suites 'src/test/recources/testng-groups.xml'
+        //dependsOn 'cleanTest'
+    }
+}
+
+task testContacts(type: Test) {
+    useTestNG {
+        suites 'src/test/recources/testng-contacts.xml'
+       // dependsOn 'cleanTest'
+
+    }
+
 }
